--- a/src/main/java/com/gmasoftware/sellersystem/MainWindow.form
+++ b/src/main/java/com/gmasoftware/sellersystem/MainWindow.form
@@ -86,8 +86,9 @@
         <DimensionLayout dim="1">
           <Group type="103" groupAlignment="0" attributes="0">
               <Group type="102" alignment="0" attributes="0">
+                  <EmptySpace max="-2" attributes="0"/>
                   <Component id="title" min="-2" max="-2" attributes="0"/>
-                  <EmptySpace type="unrelated" max="-2" attributes="0"/>
+                  <EmptySpace max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
                       <Component id="contentPanel" max="32767" attributes="0"/>
                       <Component id="mainMenu" max="32767" attributes="0"/>
@@ -101,7 +102,7 @@
         <Component class="javax.swing.JLabel" name="title">
           <Properties>
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-              <Font name="Ubuntu Light" size="32" style="0"/>
+              <Font name="Ubuntu Light" size="28" style="1"/>
             </Property>
             <Property name="text" type="java.lang.String" value="BIENVENIDO"/>
           </Properties>
@@ -116,7 +117,7 @@
             </DimensionLayout>
             <DimensionLayout dim="1">
               <Group type="103" groupAlignment="0" attributes="0">
-                  <EmptySpace min="0" pref="459" max="32767" attributes="0"/>
+                  <EmptySpace min="0" pref="458" max="32767" attributes="0"/>
               </Group>
             </DimensionLayout>
           </Layout>
